# Bittle_War

./: README.md
gscam/examples/: 2cam_gscam_launch.py  gscam_launch.py  v4l.launch.xml
robot_communication_msgs/: CMakeLists.txt  package.xml
robot_communication_msgs/msg/: CircleDetectionParams.msg
robot_interface/: CMakeLists.txt  package.xml
robot_interface/scripts/: circle_detector_node.py  find_characteristic_uuid.py  hand_detection.py  robot_interface.py
vision_processing/: CMakeLists.txt  package.xml
vision_processing/scripts/: Ui.py  circle_detector_node.py  hand_detection.py
